--- a/cliente/templates/cliente/cliente_detail.html
+++ b/cliente/templates/cliente/cliente_detail.html
@@ -1,20 +1,19 @@
 {% extends 'cliente/base.html' %}
 
 {% block content %}
-    {% for post in posts %}
-        <div class="post">
+    <div class="post">
+        {% if post.published_date %}
             <div class="date">
-                
+                {{ post.published_date }}
             </div>
-            <h1><a href="{% url 'cliente.views.post_detail' pk=post.pk %}">{{ post.first_name }}</a></h1>
-            <p>Sobrenome: {{post.last_name}}</p>
+        {% endif %}
+        	<p>Nome: {{post.first_name}}</p> 
+        	<p>Sobrenome: {{post.last_name}}</p>
             <p>Endereço: {{post.endereco}}</p>
     		<p>Complemento: {{post.complemento}}</p>
     		<p>Bairro: {{post.bairro}}</p>
     		<p>Cidade: {{post.cidade}}</p>
     		<p>CPF: {{post.cpf}}</p>
     		<p>RG: {{post.rg}}</p>
-    		<p>----------</p>
-        </div>
-    {% endfor %}
-{% endblock content %}
+    </div>
+{% endblock %}
